# learn-github-actions

./: pyproject.toml  requirements.txt
.github/workflows/: cloc.yml  linter.yml  pytest.yml
src/: calc.py  hoge.py
test/: test_calc.py
