[tool.poetry]
name = "learn-github-actions"
version = "0.1.0"
description = ""
authors = ["mahiro_sogabe <mahiro_sogabe@adforce.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
